# neon

./: .gitignore  .gitmodules  .mergify.yml  .travis.yml  CMakeLists.txt  CNAME  Doxyfile  LICENSE  LICENSE.txt  README.md  appveyor.yml  cloud_commander_ui.cpp  common.h  git_watcher.cmake  lgtm.yml  media_object.h  package.json  version.h.in
.github/: FUNDING.yml
cef_osr/: browser_client.h  cefv8_handler.h  render_handler.h
cfg/: plugins.cfg  resources.cfg
ffplay/: cmdutils.c  cmdutils.h  ffplay.c  ffplay.h
gui-interface/: gui_interface.cpp  gui_interface.h
imgui-files/: CMakeLists.txt  Example.cpp  Imgui_dock.patch  boost_fix.cpp  cef_macros.cmake  cef_variables.cmake
include/: sdl_keyboard_utils.h
patch_files/: boost_fix.cpp
src/: main.cpp
utilities/: utilities.cpp  utilities.h
web_sockets/: web_socket.cpp  web_socket.h
